<resources>
    <string name="login_app_name">Login</string>
    <!-- Strings related to login -->
    <string name="login_prompt_email">Email</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_action_sign_in">Sign in or register</string>
    <string name="login_action_sign_in_short">Sign in</string>
    <string name="login_welcome">"Welcome !"</string>
    <string name="login_invalid_username">Not a valid username</string>
    <string name="login_invalid_password">Password must be >5 characters</string>
    <string name="login_login_failed">"Login failed"</string>


    <string name="login_login_tip">登录后即可关注作者、\n发表评论、同步收藏视频和播放记录</string>
    <string name="login_auther_login_tip">想成为开眼作者？\n请到 http://open.eyepetizer.net/ 申请注册作者账号吧</string>
    <string name="login_user_login_tip">仅支持中国大陆手机号注册，\n其他地区用户请联系客服 helper@eyepetizer.net</string>
    <string name="login_agreement_desciption">登陆或注册即同意开眼</string>
    <string name="login_user_agreement">用户服务协议</string>
    <string name="login_account_tip">请输入手机号/邮箱地址</string>
    <string name="login_user_registe">用户注册</string>
    <string name="login_user_login">用户登录</string>
    <string name="login_author_login">作者登陆</string>
    <string name="login_password_tip">请输入密码</string>
    <string name="login_login">登陆</string>
    <string name="login_RetrievePassword">找回密码</string>
</resources>