<?xml version="1.0" encoding="utf-8"?>
<!--中间的账户密码EditText和登陆TextView整体并不是根据父布局竖直方向来进行约束的，
它们都是距下面的view一定的高度来约束的，因此不同分辨率的手机它们的位置可能有所不同-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_login"
    tools:context=".LoginActivity">

    <com.example.base.customview.CustomFontEditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="30dp"
        android:background="@null"
        android:drawableStart="@drawable/login_ic_password_white_lock_18dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/login_password_tip"
        android:inputType="textPassword"
        android:textColor="@color/base_colorWhite"
        android:textColorHint="@color/base_colorWhite"
        android:textSize="12sp"
        android:focusable="true"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toTopOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:typeface="fzlLTypeface"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/login_whiteAlpha85"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <include
        layout="@layout/login_layout_title"
        android:id="@+id/layout_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/base_ic_logo_slogan"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_title"/>

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_login_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login_login_tip"
        android:textColor="@color/base_colorWhite"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo"
        app:typeface="fzlLTypeface" />

    <com.example.base.customview.CustomFontEditText
        android:id="@+id/et_account"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@null"
        android:drawableStart="@drawable/login_ic_person_white_18dp"
        android:drawablePadding="5dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:hint="@string/login_account_tip"
        android:imeOptions="actionDone"
        android:textColor="@color/base_colorWhite"
        android:textColorHint="@color/base_colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:typeface="fzlLTypeface" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/login_whiteAlpha85"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_account" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/login_whiteAlpha85"
        app:layout_constraintBottom_toTopOf="@+id/group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--  Group本起着控制constraint_referenced_ids参数中的所有控件的作用，这里
      仅为了减少布局层次-->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#120b1a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--设置chainStyle为packed时需要子控件左右相互约束
    layout_constraintEnd_toStartOf、layout_constraintStart_toEndOf
    这两个属性不要弄错了，否则中间会有间隔-->
    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_agreement_desciption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_agreement_desciption"
        android:textColor="#403b47"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_agreement"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group"
        app:typeface="fzlLTypeface" />

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_user_agreement"
        android:textColor="@color/base_colorWhite"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_agreement_desciption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_agreement_desciption"
        app:layout_constraintTop_toTopOf="@+id/tv_agreement_desciption"
        app:typeface="fzdb1Typeface" />

    <ImageView
        android:id="@+id/iv_share_wechat"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_share_weibo"
        app:srcCompat="@drawable/login_ic_login_wechat_black" />

    <ImageView
        android:id="@+id/iv_share_weibo"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/iv_share_wechat"
        app:layout_constraintEnd_toStartOf="@+id/iv_share_qq"
        app:layout_constraintTop_toTopOf="@+id/iv_share_wechat"
        app:srcCompat="@drawable/login_ic_login_weibo_black" />

    <ImageView
        android:id="@+id/iv_share_qq"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_share_weibo"
        app:layout_constraintTop_toTopOf="@+id/iv_share_weibo"
        app:srcCompat="@drawable/login_ic_login_qq_black" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gp_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="iv_share_qq,iv_share_wechat,iv_share_weibo" />

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_user_registe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/login_user_registe"
        android:textColor="@color/base_colorWhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_author_login"
        app:layout_constraintBottom_toTopOf="@+id/iv_share_wechat"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:typeface="fzdb1Typeface"/>

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_author_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_author_login"
        android:textColor="@color/base_colorWhite"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tv_user_registe"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_registe"
        app:layout_constraintEnd_toEndOf="@+id/tv_login"
        app:layout_constraintTop_toTopOf="@+id/tv_user_registe"
        app:typeface="fzdb1Typeface"/>

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:background="@color/login_whiteAlpha50"
        android:gravity="center"
        android:text="@string/login_login"
        android:textColor="@color/login_blackAlpha85"
        app:layout_constraintBottom_toTopOf="@+id/tv_user_registe"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:typeface="fzdb1Typeface" />

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_user_registe_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/login_user_login_tip"
        android:textColor="@color/base_colorWhite"
        android:gravity="center"
        android:visibility="invisible"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:typeface="fzlLTypeface"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>